# mp3-player

./: .gitignore  Cargo.toml  README.md
audio-analyzer/: Cargo.toml  README.md
audio-analyzer/src/: args.rs  main.rs  pixel_buf.rs  spectrum_analyzer.rs
audio-manager/: Cargo.toml  README.md
audio-manager/src/: args.rs  audio_library.rs  fs_manager.rs  lib.rs  main.rs
audio-manager/src/audio_library/: metadata_aggregator.rs  tags_aggregator_result_builder.rs  visitor.rs
audio-player/: Cargo.toml  README.md  history_log.txt
audio-player/src/: args.rs  audio_parser.rs  audio_tags.rs  lib.rs  main.rs  symphonia_wrapper.rs
audio-player/src/symphonia_wrapper/: commons.rs  metadata_parser.rs  output.rs  player.rs
