[package]
name = "audio-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aubio-rs = "0.2.0"
audio-player = { path = "../audio-player"}
clap = { version = "4.1.1", features = ["derive"] }
hound = "3.5.0" # WAV encoding / decoding
log = "0.4.17"
minifb = "0.23.0" # window mainly for PoC
plotters = "0.3.4" # charts
