[package]
name = "audio-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-player = { path = "../audio-player"}
clap = { version = "4.1.1", features = ["derive"] }
log = "0.4.17"
tempfile = "3.3.0"
